scss_Button Component

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -2,6 +2,20 @@ $orange : #fd7e14;
 $yellow : #ffd43b;
 $lime : #c0eb75;
 
+@mixin button-color ($color){
+  background:$color;
+  &:hover{
+    background : lighten($color, 10%);
+  }
+  &:active{
+    background : darken($color, 10%);
+  }
+  &.outline{
+    background:none;
+    border: 2px solid $color;
+    color:$color
+  }
+}
 .Button{
   display:inline-flex;
   align-items:center;
@@ -9,17 +23,31 @@ $lime : #c0eb75;
   border:none;
   outline:none;
   
-  height:2rem;
   color:white;
-  background:$orange;
   border-radius:4px;
   font-weight:bold;
   padding:0 1rem;
-  &:hover{
-    background : lighten($orange, 10%);
+
+&.large{height:2.5rem;}
+&.medium{height:2rem;}
+&.small{height:1.75rem;}
+
+  &.orange{
+    @include button-color($orange);
   }
-  &:active{
-    background : darken($orange, 10%);
+  &.yellow{
+    @include button-color($yellow);
+  }  
+  &.lime{
+    @include button-color($lime);
   }
 
+  &.fullWidth{
+    width:90%;
+
+  }
+  &+&{
+    margin-left:1rem;
+    margin-top:.5rem;
+  }
 }
